feat(turnovers): standardize playmaker labels to jersey + initial + last

--- a/index.html
+++ b/index.html
@@ -975,6 +975,30 @@ function getTurnoverType(desc) {
     return '';
 }
 
+function formatTurnoverPlaymakerLabel(name, jersey) {
+    const cleanName = (name || '').trim().replace(/\s+/g, ' ');
+    const cleanJersey = String(jersey || '').replace(/[^\d]/g, '');
+    if (!cleanName) return cleanJersey ? `#${cleanJersey}` : '';
+
+    const parts = cleanName.split(' ').filter(Boolean);
+    let initial = '';
+    let last = cleanName;
+    if (parts.length >= 2) {
+        const first = parts[0].replace(/\./g, '');
+        initial = first ? first.charAt(0).toUpperCase() : '';
+        last = parts.slice(1).join(' ');
+    } else {
+        const dotted = cleanName.match(/^([A-Z])\.\s*(.+)$/);
+        if (dotted) {
+            initial = dotted[1];
+            last = dotted[2];
+        }
+    }
+
+    const namePart = initial ? `${initial}. ${last}` : last;
+    return cleanJersey ? `#${cleanJersey} ${namePart}` : namePart;
+}
+
 function buildTurnoverTypeLookup(game) {
     const lookup = {};
     (game.post_turnover_drives || []).forEach(d => {
@@ -991,8 +1015,8 @@ function resolveTurnoverType(play, lookup) {
     return getTurnoverType(play && play.description ? play.description : '');
 }
 
-function extractTurnoverPlaymaker(desc) {
-    if (!desc || typeof desc !== 'string') return '';
+function extractTurnoverPlaymakerDetails(desc) {
+    if (!desc || typeof desc !== 'string') return { key: '', name: '', jersey: '', display: '' };
     const type = getTurnoverType(desc);
     let match = null;
     if (type === 'INT') {
@@ -1003,8 +1027,18 @@ function extractTurnoverPlaymaker(desc) {
             match = desc.match(/forced by (.+?)(?: recovered| at |,|;\s*|\.\s+|$)/i);
         }
     }
-    if (!match || !match[1]) return '';
-    return normalizePlayerName(match[1]);
+    if (!match || !match[1]) return { key: '', name: '', jersey: '', display: '' };
+    const raw = match[1].trim();
+    const jerseyMatch = raw.match(/#\s?(\d{1,2})\b/);
+    const jersey = jerseyMatch ? jerseyMatch[1] : '';
+    const name = normalizePlayerName(raw);
+    const key = name.toLowerCase();
+    const display = formatTurnoverPlaymakerLabel(name, jersey);
+    return { key, name, jersey, display };
+}
+
+function extractTurnoverPlaymaker(desc) {
+    return extractTurnoverPlaymakerDetails(desc).display;
 }
 
 function compBar(label, valA, valB, unit='') {
@@ -1399,19 +1433,22 @@ function renderPlaymakers(games, teamAbbr, teamClass) {
             q.drives.forEach(d => {
                 d.plays.filter(p => p.is_turnover).forEach(p => {
                     if (!p.offense || p.offense === teamAbbr) return;
-                    const name = extractTurnoverPlaymaker(p.description || '');
-                    if (!name) return;
+                    const player = extractTurnoverPlaymakerDetails(p.description || '');
+                    if (!player.key) return;
                     const type = resolveTurnoverType(p, typeLookup);
-                    if (!counts[name]) counts[name] = {int: 0, fum: 0, other: 0, total: 0};
-                    if (type === 'INT') counts[name].int += 1;
-                    else if (type === 'FUM') counts[name].fum += 1;
-                    else counts[name].other += 1;
-                    counts[name].total += 1;
+                    if (!counts[player.key]) counts[player.key] = {name: player.name, int: 0, fum: 0, other: 0, total: 0, displays: {}};
+                    if (type === 'INT') counts[player.key].int += 1;
+                    else if (type === 'FUM') counts[player.key].fum += 1;
+                    else counts[player.key].other += 1;
+                    counts[player.key].total += 1;
+                    if (player.display) {
+                        counts[player.key].displays[player.display] = (counts[player.key].displays[player.display] || 0) + 1;
+                    }
                 });
             });
         });
     });
-    const top = Object.entries(counts).sort((a,b) => b[1].total - a[1].total).slice(0,5);
+    const top = Object.values(counts).sort((a,b) => b.total - a.total).slice(0,5);
     if (!top.length) return `<div class="text-zinc-500 text-xs p-4">No turnover playmakers found.</div>`;
     const formatBreakdown = row => {
         const parts = [];
@@ -1420,10 +1457,16 @@ function renderPlaymakers(games, teamAbbr, teamClass) {
         if (row.other) parts.push(`${row.other} TO`);
         return parts.join(', ') || '0';
     };
+    const pickDisplay = (row) => {
+        const entries = Object.entries(row.displays || {});
+        if (!entries.length) return formatTurnoverPlaymakerLabel(row.name, '');
+        entries.sort((a, b) => b[1] - a[1]);
+        return entries[0][0];
+    };
     return `<div class="space-y-2">
-        ${top.map((t,i) => `<div class="flex items-center justify-between text-sm">
-            <span class="${teamClass}">${i+1}. ${t[0]}</span>
-            <span class="text-zinc-500">${formatBreakdown(t[1])}</span>
+        ${top.map((row,i) => `<div class="flex items-center justify-between text-sm">
+            <span class="${teamClass}">${i+1}. ${pickDisplay(row)}</span>
+            <span class="text-zinc-500">${formatBreakdown(row)}</span>
         </div>`).join('')}
     </div>`;
 }
