--- a/index.html
+++ b/index.html
@@ -3796,9 +3796,57 @@ function showEmptyState() {
     if (!main) return;
     main.innerHTML = `<div class="state-card section-enter">
         <div class="text-sm font-semibold text-zinc-200">No data available</div>
-        <div class="text-xs text-zinc-500 mt-2">The dataset is missing or malformed. Please verify data.json and try again.</div>
+        <div class="text-xs text-zinc-500 mt-2">The dataset is missing or malformed. Please verify matchup data files and try again.</div>
         <button class="mt-4 px-3 py-2 rounded-lg text-xs font-semibold border border-white/10 bg-white/5 text-zinc-200 hover:bg-white/10" aria-label="Reload data" onclick="initApp()">Reload</button>
     </div>`;
+}
+
+function getMatchupSlugFromLocation() {
+    const params = new URLSearchParams(window.location.search || '');
+    const fromQuery = params.get('matchup');
+    if (fromQuery) return fromQuery.trim();
+    const m = (window.location.pathname || '').match(/\/matchups\/([^/]+)\/?$/i);
+    if (m && m[1]) return decodeURIComponent(m[1]);
+    return '';
+}
+
+function dataFetchCandidates() {
+    const slug = getMatchupSlugFromLocation();
+    if (slug) {
+        return [
+            `matchups/${slug}/data.json`,
+            `/matchups/${slug}/data.json`,
+            'data.json',
+        ];
+    }
+    return ['data.json'];
+}
+
+function normalizeMatchupData(d) {
+    if (!d || typeof d !== 'object' || !d.teams || typeof d.teams !== 'object') return null;
+    const teamMap = d.teams;
+    const validTeamKeys = Object.keys(teamMap).filter(k => teamMap[k] && Array.isArray(teamMap[k].games));
+    if (validTeamKeys.length < 2) return null;
+
+    let teamAKey = null;
+    let teamBKey = null;
+    const metaTeams = d.metadata && Array.isArray(d.metadata.teams) ? d.metadata.teams : null;
+    if (metaTeams && metaTeams.length >= 2 && teamMap[metaTeams[0]] && teamMap[metaTeams[1]]) {
+        teamAKey = metaTeams[0];
+        teamBKey = metaTeams[1];
+    } else if (teamMap.georgia && teamMap.asu) {
+        teamAKey = 'georgia';
+        teamBKey = 'asu';
+    } else {
+        teamAKey = validTeamKeys[0];
+        teamBKey = validTeamKeys[1];
+    }
+
+    // Compatibility bridge: existing UI reads teams.georgia / teams.asu everywhere.
+    if (teamAKey !== 'georgia') teamMap.georgia = teamMap[teamAKey];
+    if (teamBKey !== 'asu') teamMap.asu = teamMap[teamBKey];
+    d.__matchup = { teamAKey, teamBKey };
+    return d;
 }
 
 function isDataValid(d) {
@@ -4995,23 +5043,34 @@ function initApp() {
     initKeyboardControls();
     initTouchTabs();
     showLoadingState();
-    fetch('data.json').then(r => {
-        if (!r.ok) throw new Error(`HTTP ${r.status}`);
-        return r.json();
-    }).then(d => {
-        if (!isDataValid(d)) {
+    const candidates = dataFetchCandidates();
+    const tryFetch = (idx = 0) => {
+        if (idx >= candidates.length) {
+            throw new Error(`No dataset found (${candidates.join(', ')})`);
+        }
+        const target = candidates[idx];
+        return fetch(target).then(r => {
+            if (!r.ok) throw new Error(`HTTP ${r.status}`);
+            return r.json();
+        }).then(d => ({ d, target })).catch(() => tryFetch(idx + 1));
+    };
+    tryFetch().then(({ d, target }) => {
+        const normalized = normalizeMatchupData(d);
+        if (!normalized || !isDataValid(normalized)) {
             showEmptyState();
             return;
         }
-        DATA = d;
-        const lookups = buildPlayerLookups(d);
+        DATA = normalized;
+        console.log(`Loaded matchup dataset from: ${target}`);
+        const ga = normalized.teams.georgia, aa = normalized.teams.asu;
+        document.getElementById('teamAName').textContent = ga.name;
+        document.getElementById('teamBName').textContent = aa.name;
+
+        const lookups = buildPlayerLookups(normalized);
         PLAYER_INITIAL_LAST_LOOKUP = lookups.initialLastLookup;
         PLAYER_LASTNAME_LOOKUP = lookups.lastNameLookup;
         PLAYER_JERSEY_LOOKUP = lookups.jerseyLookup;
         applyHashState();
-        const ga = d.teams.georgia, aa = d.teams.asu;
-        document.getElementById('teamAName').textContent = ga.name;
-        document.getElementById('teamBName').textContent = aa.name;
         buildNav();
         buildFilters();
         updateHeader();
@@ -5031,7 +5090,7 @@ function initApp() {
             }
         }
     }).catch(e => {
-        showErrorState(`Failed to load data.json (${e.message}).`);
+        showErrorState(`Failed to load matchup data (${e.message}).`);
     });
 }
 
